# kvittering

./: .babelrc  .dockerignore  .drone.yml  .eslintrc  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.kaaf  Dockerfile.kvittering  LICENSE  README.md  cypress.config.ts  cypress.json  generate.py  mail.py  next.config.js  package.json  pyproject.toml  tailwind.config.js  template.tex  webpack.config.js  webpack.loaders.js  webpack.production.config.js
.github/: PULL_REQUEST_TEMPLATE.md  auto-merge.yml  dependabot.yml
kaaf/: generate-example.py  handler.py  mail.py  req.txt  server.py  template.tex  utils.py
kvittering/: Admin.js  App.css  App.js  CreateTemplate.js  FileUpload.css  Form.css  Form.js  Input.js  PictureUpload.js  SignatureUpload.js  TexUpload.js  globals.css  index.js  template.html
kvittering/components/Tooltip/: index.js
server/: generate-example.py  handler.py  mail.py  server.py  test_server.py
server/requirements/: base.txt  prod.txt
test/: Dockerfile  test_image  test_kaaf.py  test_template.tex
webapp/: .env.example  tsconfig.json
webapp/components/: ConfirmationModal.tsx  FileUpload.module.css  Footer.tsx  Form.module.css  Form.tsx  Input.module.css  Input.tsx  PictureUpload.tsx  Sign.tsx  SignatureUpload.tsx  globals.module.css
webapp/components/elements/: FormButton.tsx  FormInput.tsx  FormSelect.tsx  index.ts
webapp/cypress/e2e/: index.cy.js
webapp/cypress/integration/: index.spec.js
webapp/pages/: _app.css  _app.tsx  _document.tsx  index.tsx
webapp/utils/: datalists.ts  debounce.ts  fileHelper.ts  validators.ts
