[tool.poetry]
name = "kvittering"
version = "1.0.0"
description = ""
authors = ["Webkom Abakus <webkom@abakus.no>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"

flask = "3.0.1"
gevent = "23.9.1"
fpdf = "1.7.2"
sentry-sdk = {extras = ["flask"], version = "^1.39.2"}
pdf2image = "1.17.0"
pillow-heif = "^0.13.0"
google = "3.0.0"
google-api-python-client = "2.115.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
mailinglogger = "^6.0.0"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37']
preview = true

[tool.isort]
py_version = 37
profile = "black"
force_single_line = true
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["server"]
